--- a/index.html
+++ b/index.html
@@ -7,29 +7,30 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
   <link rel="stylesheet" href="./css/style.css" />
+  <script src="scripts/script.js"></script>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"
     integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <title>Document</title>
 </head>
-<div class="container">
-  <div id="menu">teste</div>
-</div>
-</div>
 
 <body>
   <div class="container">
-    <div id="conteudo">Página Inicial</div>
-    </p>
+    <div id="menu">teste</div>
   </div>
+  <div class="container">
+    <div id="conteudo">Página Inicial</div>
+  </div>
+  <div class="container">
+    <div id="footer">Rodapél</div>
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
   <script lang="text/javascript">
     $("#menu").load("./componentes/menu.html");
-    function menu(pagina) {
-      $("#conteudo").load("./componentes/" + pagina + ".html ");
-
-    }
+    $("#footer").load("./componentes/footer.html");
+  
   </script>
 
 </body>
