--- a/componentes/ensino.html
+++ b/componentes/ensino.html
@@ -1,3 +1,15 @@
-<div class="container">
+<div class="container border border-primary-subtle border-2 rounded-pill p-1 mb-2 my-2 bg-primary-subtle text-primary-emphasis text-center">
     Página sobre o ensino no IFMS
-</div>
+</div> <div class="container text-center">
+        <div class="row">
+          <div class="col-6 text-justify primeira-linha">
+            <p id="Lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, repudiandae.</p>
+            <p id="Laborum">Laborum, corporis repellat beatae impedit dolores enim dicta? Ea, sunt?</p>
+            <p id="Illo">Illo consectetur obcaecati alias dolores officia omnis dolore eos nesciunt.</p>
+          </div>
+          <div class="col-6 text-justify primeira-linha">
+            <p><a href="#Lorem">Lorem</a></p>
+            <p><a href="#Laborum">Laborum</a></p>
+            <p><a href="#Illo">Illo</a></p>
+          </div>
+        </div>
