--- a/componentes/extensao.html
+++ b/componentes/extensao.html
@@ -1,3 +1,3 @@
-<div class="container">
+<div class="container border border-primary-subtle border-2 rounded-pill p-1 mb-2 my-2 bg-primary-subtle text-primary-emphasis text-center">
     Página sobre os Projetos de Extensão no IFMS
 </div>
