--- a/componentes/footer.html
+++ b/componentes/footer.html
@@ -1,3 +1,3 @@
-<div class="container degrade-ifms navbar-expand-sm border border-success-subtle border-2 rounded-2">
+<div class="container bg-primary text-white navbar-expand-sm border border-success-subtle border-2 rounded-2">
     IFMS - Campus Dourados
 </div>
