--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="container">
     <div id="menu">teste</div>
   </div>
-  <div class="container">
+  <div class="container mb-2">
     <div id="conteudo">Página Inicial</div>
   </div>
   <div class="container">
