--- a/componentes/menu.html
+++ b/componentes/menu.html
@@ -1,4 +1,4 @@
-<nav class="navbar bg-primary text-white navbar-expand-sm border border-success-subtle border-2 rounded-2">
+<nav class="navbar bg-info text-white navbar-expand-sm border border-success-subtle border-2 rounded-2">
   <div class="container-fluid ">
     <a class="navbar-brand" href="/">Front-End</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
