--- a/componentes/esportes.html
+++ b/componentes/esportes.html
@@ -1,5 +1,5 @@
 <div
-  class="container border border-success border-2 rounded-pill p-1 my-2 bg-success-subtle text-success-emphasis text-center"
+  class="container border border-info-subtle border-2 rounded-pill p-1 my-2 bg-info-subtle text-success-emphasis text-center"
 >
   Página de Esportes do IFMS
 </div>
