--- a/componentes/footer.html
+++ b/componentes/footer.html
@@ -1,3 +1,3 @@
-<div class="container bg-primary text-white navbar-expand-sm border border-success-subtle border-2 rounded-2  text-center fixed-bottom">
+<div class="container bg-info text-white navbar-expand-sm border border-success-subtle border-2 rounded-2  text-center fixed-bottom">
     IFMS - Campus Dourados
 </div>
